<resources>
    <string name="app_name">SubmissionIntermediate</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="title_login_page">Please Login</string>
    <string name="title_signup_page">Complete your personal data</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="email_not_valid">Input must be email</string>
    <string name="password_warning"> Password cannot be less than 8 characters</string>
    <string name="must_8_character">Password cannot be less than 8 characters</string>
    <string name="input_name">Enter your name</string>
    <string name="name_warning">Name cannot be empty</string>
    <string name="have_account">Don\'t have an account?</string>
    <string name="btn_register">Register now</string>
    <string name="description">Description</string>
    <string name="image_photo">Image Photo</string>
    <string name="button_add">Button Add</string>
    <string name="camera">Camera</string>
    <string name="image_preview">Image Preview</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Unggah</string>
    <string name="email_input">Enter your email</string>
    <string name="password_input">Enter your password</string>
    <string name="failed_register">Failed to create account</string>
    <string name="change_language">Change language</string>
    <string name="logo">Logo</string>
    <string name="switch_camera">Switch camera</string>
    <string name="input_description">Enter a description first</string>
    <string name="upload_image">Please enter the image file first</string>
    <string name="retry">You Must Try Again</string>
    <string name="switch_location">Location</string>
    <string name="allowed_location">Location Allowed</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">ActivityMaps</string>
</resources>